--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,78 @@
 /* main css stylesheet */
 
-body{
-	color: red;
+/*header css*/
+header{
+	display:block;
 }
+#logo{
+	
+}
+
+#japanese{
+	
+	
+}
+/*navigation css*/
+
+nav ul{
+	margin-left: 0;
+	padding-left: 0;
+	white-space: nowrap;
+}
+
+nav li{
+	display: inline-block;
+	list-style-type: none;
+	width: 10%;
+}
+
+nav  a{ 
+	padding: 3px 10px; 
+	text-decoration:none;
+}
+
+nav a:link, nav a:visited
+{
+	color: #fff;
+	background-color: #036;	
+}
+
+nav a:hover
+{
+	color: #fff;
+	background-color: #369;
+}
+.dropdown{
+	display:none;
+	position:absolute;
+	z-index:999;
+	margin-top: 10px;
+	width:100%;
+}
+.dropdown li{
+	min-width:100%;
+	
+}
+
+nav ul li:hover ul.dropdown{ 
+	display:block;		
+}
+nav ul li ul.dropdown li{display:block;}
+
+/*main css*/
+main{
+	
+}
+
+
+/*footer css*/
+footer{
+	
+	
+}
+
+
+
 
 
 
