--- a/css/styles.css
+++ b/css/styles.css
@@ -1,29 +1,137 @@
 /* main css stylesheet */
 
+/*load fonts*/
+@font-face {
+    font-family: 'acrosstheroad';
+    src: url('../media/fonts/acrosstheroad-webfont.eot');
+    src: url('../media/fonts/acrosstheroad-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../media/fonts/acrosstheroad-webfont.woff2') format('woff2'),
+         url('../media/fonts/acrosstheroad-webfont.woff') format('woff'),
+         url('../media/fonts/acrosstheroad-webfont.ttf') format('truetype'),
+         url('../media/fonts/acrosstheroad-webfont.svg#acrosstheroad') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'caviarDreams';
+    src: url('../media/fonts/caviardreams-webfont.eot');
+    src: url('../media/fonts/caviardreams-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../media/fonts/caviardreams-webfont.woff2') format('woff2'),
+         url('../media/fonts/caviardreams-webfont.woff') format('woff'),
+         url('../media/fonts/caviardreams-webfont.ttf') format('truetype'),
+         url('../media/fonts/caviardreams-webfont.svg#caviar_dreamsregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'caviarDreams';
+    src: url('../media/fonts/caviardreams_bold-webfont.eot');
+    src: url('../media/fonts/caviardreams_bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../media/fonts/caviardreams_bold-webfont.woff2') format('woff2'),
+         url('../media/fonts/caviardreams_bold-webfont.woff') format('woff'),
+         url('../media/fonts/caviardreams_bold-webfont.ttf') format('truetype'),
+         url('../media/fonts/caviardreams_bold-webfont.svg#caviar_dreamsbold') format('svg');
+    font-weight: bold;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'caviarDreams';
+    src: url('../media/fonts/caviardreams_bolditalic-webfont.eot');
+    src: url('../media/fonts/caviardreams_bolditalic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../media/fonts/caviardreams_bolditalic-webfont.woff2') format('woff2'),
+         url('../media/fonts/caviardreams_bolditalic-webfont.woff') format('woff'),
+         url('../media/fonts/caviardreams_bolditalic-webfont.ttf') format('truetype'),
+         url('../media/fonts/caviardreams_bolditalic-webfont.svg#caviar_dreamsbold_italic') format('svg');
+    font-weight: bold;
+    font-style: italic;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'caviarDreams';
+    src: url('../media/fonts/caviardreams_italic-webfont.eot');
+    src: url('../media/fonts/caviardreams_italic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../media/fonts/caviardreams_italic-webfont.woff2') format('woff2'),
+         url('../media/fonts/caviardreams_italic-webfont.woff') format('woff'),
+         url('../media/fonts/caviardreams_italic-webfont.ttf') format('truetype'),
+         url('../media/fonts/caviardreams_italic-webfont.svg#caviar_dreamsitalic') format('svg');
+    font-weight: normal;
+    font-style: italic;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'nobilityCasual';
+    src: url('../media/fonts/nobility-webfont.eot');
+    src: url('../media/fonts/nobility-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../media/fonts/nobility-webfont.woff2') format('woff2'),
+         url('../media/fonts/nobility-webfont.woff') format('woff'),
+         url('../media/fonts/nobility-webfont.ttf') format('truetype'),
+         url('../media/fonts/nobility-webfont.svg#nobility_casualregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+/*body*/
+body{
+	width:80%;
+	margin:auto;
+}
+
 /*header css*/
 header{
 	display:block;
+	position: fixed;
 }
-#logo{
+#logo span{
 	
+	font-family:acrosstheroad;
+	font-size:3em;
 }
 
 #japanese{
 	
+	float:right;
 	
 }
 /*navigation css*/
 
+nav{position:static;}
+
 nav ul{
-	margin-left: 0;
-	padding-left: 0;
+	margin:auto;
 	white-space: nowrap;
+	min-width: 15%;
 }
 
 nav li{
 	display: inline-block;
 	list-style-type: none;
-	width: 10%;
+	
+	font-family:nobilityCasual;
+	
 }
 
 nav  a{ 
@@ -34,23 +142,23 @@ nav  a{
 nav a:link, nav a:visited
 {
 	color: #fff;
-	background-color: #036;	
+	background-color: #B20100;	
 }
 
 nav a:hover
 {
 	color: #fff;
-	background-color: #369;
+	background-color: #1F1A21;
 }
 .dropdown{
 	display:none;
 	position:absolute;
 	z-index:999;
-	margin-top: 10px;
 	width:100%;
 }
 .dropdown li{
 	min-width:100%;
+	margin: 0px;
 	
 }
 
@@ -67,7 +175,16 @@ main{
 
 /*footer css*/
 footer{
+	position:absolute;
+	top: 20%;
+	width:90%;
+	font-family:'caviarDreams';
 	
+}
+
+footer h1{
+	font-family:'nobilityCasual';
+	color: #1F1A21; 
 	
 }
 
