--- a/css/styles.css
+++ b/css/styles.css
@@ -94,36 +94,57 @@
 
 }
 
-/*body*/
-body{
-	
-	
+@font-face {
+    font-family:'hakusyu';
+    src: url('../media/fonts/hkgokukaikk-webfont.eot');
+    src: url('../media/fonts/hkgokukaikk-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../media/fonts/hkgokukaikk-webfont.woff2') format('woff2'),
+         url('../media/fonts/hkgokukaikk-webfont.woff') format('woff'),
+         url('../media/fonts/hkgokukaikk-webfont.ttf') format('truetype'),
+         url('../media/fonts/hkgokukaikk-webfont.svg#hakusyukaisyoextrabold_kkRg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
 }
+
 
 /*header css*/
 header{
-	margin:auto;
-	width:80%;
+	
+	width:100%;
 	position: fixed;
+	background-color:white;
+	margin: 15px;
 }
 #logo span{
 	
 	font-family:acrosstheroad;
 	font-size:3em;
+	padding-left:.5em;
+}
+#logo{
+	background-image:url("../media/logo.svg");
+	background-repeat:no-repeat;
+	background-position:right;
+	background-size: contain;
+	display:inline-block;
+	padding-right: 4.8em;
 }
 
-#japanese{
-	
-	float:right;
+#japanese, #japanese:visited, #japanese:link{
+	font-family:hakusyu;
+	position:absolute;
+	right: 4em;
+	font-size:1.5em;
+	color:black;
 	
 }
 /*navigation css*/
 
-nav{margin:auto;}
+nav{display:inline-block; position:relative; top:100px; margin:auto;}
 
 nav ul{
 	white-space: nowrap;
-	height:30px;
 	
 }
 
@@ -131,22 +152,29 @@ nav ul li{
 	float:left;
 	list-style-type: none;
 	list-style-position:inside;
+	font-size:1.5em;
 	
 }
 
 nav ul li a{ 
-	padding: 3px 10px; 
+	padding: 5px 20px; 
 	display:block;
 	text-decoration:none;
-	font-family:nobilityCasual;
+	font-family:caviarDreams;
 	color: #FFF;
 }
-
+#current a{
+	background-color:white;
+	color: black;
+}
 nav a:link, nav a:visited
 {
 	background-color: #B20100;	
 }
-
+a#current , a#current:hover, a#current:link, a#current:visited{
+	background-color:white;
+	color: black;
+}
 nav a:hover
 {
 	background-color: #1F1A21;
@@ -160,40 +188,21 @@ ul.dropdown{
 }
 ul.dropdown li{
 	float:none;
-	padding:0px;
-
+	font-size:1em;
 }
 nav ul li:hover{
-	position:relative;
+	
 }
 nav ul li:hover ul.dropdown{ 
-	display:block;
-	left:0px;
-}
-
-nav ul li ul.dropdown li {display:block;}
-
-
-/*main css*/
-main{
-	
-}
-
-
-/*footer css*/
-footer{
+	display:inline-block;
 	position:absolute;
-	top: 20%;
-	width:90%;
-	font-family:'caviarDreams';
 	
 }
 
-footer h1{
-	font-family:'nobilityCasual';
-	color: #1F1A21; 
-	
-}
+nav ul li ul.dropdown li {display: block; }
+
+
+
 
 
 
