--- a/japanese/css/stylesjp.css
+++ b/japanese/css/stylesjp.css
@@ -1,3 +1,139 @@
-body{
-	font-family:hakusyu !important; /*kind of sketch to use !important, but it makes the code so much simpler */ 
+/* main japanese css stylesheet */
+
+/*load fonts*/
+@font-face {
+    font-family: 'acrosstheroad';
+    src: url('../../media/fonts/acrosstheroad-webfont.eot');
+    src: url('../../media/fonts/acrosstheroad-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../../media/fonts/acrosstheroad-webfont.woff2') format('woff2'),
+         url('../../media/fonts/acrosstheroad-webfont.woff') format('woff'),
+         url('../../media/fonts/acrosstheroad-webfont.ttf') format('truetype'),
+         url('../../media/fonts/acrosstheroad-webfont.svg#acrosstheroad') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
 }
+
+
+
+
+@font-face {
+    font-family:'epmarugo';
+    src: url('../media/fonts/epmarugo.ttf');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face{
+	font-family:'epgyobold'
+	src:url('../media/fonts/epgyobold.ttf');
+	font-weight:normal;
+	font-style:normal;
+	
+}
+
+
+/*header css*/
+header{
+	
+	width:100%;
+	position: fixed;
+	background-color:white;
+	margin: 15px;
+}
+#logo span{
+	
+	font-family:acrosstheroad;
+	font-size:3em;
+	padding-left:.5em;
+}
+#logo{
+	background-image:url("../media/logo.svg");
+	background-repeat:no-repeat;
+	background-position:right;
+	background-size: contain;
+	display:inline-block;
+	padding-right: 4.8em;
+}
+
+#japanese, #japanese:visited, #japanese:link{
+	font-family:epmarugo;
+	position:absolute;
+	right: 4em;
+	font-size:1.5em;
+	color:black;
+	
+}
+/*navigation css*/
+
+nav{display:inline-block; position:relative; top:100px; margin:auto;}
+
+nav ul{
+	white-space: nowrap;
+	
+}
+
+nav ul li{
+	float:left;
+	list-style-type: none;
+	list-style-position:inside;
+	font-size:1.5em;
+	
+}
+
+nav ul li a{ 
+	padding: 5px 20px; 
+	display:block;
+	text-decoration:none;
+	font-family:epgyobold;
+	color: #FFF;
+}
+#current a{
+	background-color:white;
+	color: black;
+}
+nav a:link, nav a:visited
+{
+	background-color: #B20100;	
+}
+a#current , a#current:hover, a#current:link, a#current:visited{
+	background-color:white;
+	color: black;
+}
+nav a:hover
+{
+	background-color: #1F1A21;
+}
+ul.dropdown{
+	display:none;
+	list-style-type:none;
+	z-index:999;
+	width:100%;
+	list-style-position:inside;
+}
+ul.dropdown li{
+	float:none;
+	font-size:1em;
+	font-family:epmarugo;
+}
+nav ul li:hover{
+	
+}
+nav ul li:hover ul.dropdown{ 
+	display:inline-block;
+	position:absolute;
+	
+}
+
+nav ul li ul.dropdown li {display: block; }
+
+
+
+
+
+
+
+
+
+
