--- a/css/styles.css
+++ b/css/styles.css
@@ -102,7 +102,6 @@
 
 }
 
-
 /*header css*/
 header{
 	
@@ -139,11 +138,11 @@ header{
 }
 /*navigation css*/
 
-nav{display:inline-block; position:relative; top:100px; margin:auto; }
+nav{display:inline-block; position:relative; top:100px; margin:auto;}
 
 nav ul{
 	white-space: nowrap;
-	
+	list-style-position:inside;
 }
 
 nav ul li{
