--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,57 @@
 /* main css stylesheet */
 
+/*clear browser defaults*/
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+
+
 /*load fonts*/
 @font-face {
     font-family: 'acrosstheroad';
@@ -102,13 +154,14 @@
 
 }
 
+
 /*header css*/
 header{
 	
 	width:100%;
 	position: fixed;
 	background-color:white;
-	margin: 15px;
+	padding: 15px;
 	
 }
 #logo span{
@@ -150,7 +203,6 @@ nav ul li{
 	list-style-type: none;
 	list-style-position:inside;
 	font-size:1.5em;
-	
 }
 
 nav ul li a{ 
@@ -180,8 +232,8 @@ ul.dropdown{
 	display:none;
 	list-style-type:none;
 	z-index:999;
-	width:100%;
 	list-style-position:inside;
+	padding-left:0px;
 }
 ul.dropdown li{
 	float:none;
@@ -193,10 +245,10 @@ nav ul li:hover{
 nav ul li:hover ul.dropdown{ 
 	display:inline-block;
 	position:absolute;
-	
+	overflow:hidden;
 }
 
-nav ul li ul.dropdown li {display: block; }
+nav ul li ul.dropdown li {display: block;  }
 
 
 
