--- a/japanese/css/stylesjp.css
+++ b/japanese/css/stylesjp.css
@@ -1,5 +1,56 @@
 /* main japanese css stylesheet */
 
+/*clear browser defaults */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+
 /*load fonts*/
 @font-face {
     font-family: 'acrosstheroad';
@@ -40,28 +91,30 @@ header{
 	width:100%;
 	position: fixed;
 	background-color:white;
-	margin: 15px;
+	padding: 15px;
 }
 #logo span{
 	
 	font-family:acrosstheroad;
-	font-size:3em;
-	padding-left:.5em;
+	font-size:2.5em;
+	padding-right:.5em;
+	
 }
 #logo{
-	background-image:url("../media/logo.svg");
+	background-image:url("../../media/logo.svg");
 	background-repeat:no-repeat;
-	background-position:right;
+	background-position:left;
 	background-size: contain;
 	display:inline-block;
-	padding-right: 4.8em;
+	padding-left: 5em;
+	padding-top:1em;
 }
 
-#japanese, #japanese:visited, #japanese:link{
+#english, #english:visited, #english:link{
 	font-family:epmarugo;
 	position:absolute;
 	right: 4em;
-	font-size:1.5em;
+	font-size:1em;
 	color:black;
 	
 }
