--- a/css/education.css
+++ b/css/education.css
@@ -1,1 +1,41 @@
 /*css for education, skills, qualifications, etc */
+
+article#main{
+	width:70%;
+	margin:auto;
+	padding-top:300px; /*start off below the header*/
+}
+
+article#main section{
+	font-family:"caviarDreams";
+	
+}
+
+article#main section h2{
+	font-family:"nobilityCasual";
+	font-size: 1.8em;
+	font-style:bold;
+	padding:10px;
+	
+	
+}
+
+article#main section h4{
+	font-family:"nobilityCasual";
+	font-size: 1.2em;
+	font-style:bold;
+	padding:10px;
+	padding-left:20px;
+}
+
+article#main section ul{
+	list-style-type:square;
+	padding-left:40px;
+}
+
+article#main section ul li{
+	list-style-position:inside;
+	padding:5px;
+	
+	
+}
