--- a/css/styles.css
+++ b/css/styles.css
@@ -191,7 +191,14 @@ header{
 }
 /*navigation css*/
 
-nav{display:inline-block; position:relative; top:100px; margin:auto;}
+nav{
+	display:inline-block; 
+	position:relative; 
+	top:100px; 
+	margin-left:15%;
+	width:75%;
+	margin-right:15%;
+	}
 
 nav ul{
 	white-space: nowrap;
@@ -202,7 +209,7 @@ nav ul li{
 	float:left;
 	list-style-type: none;
 	list-style-position:inside;
-	font-size:1.5em;
+	font-size:1.2em;
 }
 
 nav ul li a{ 
@@ -237,7 +244,7 @@ ul.dropdown{
 }
 ul.dropdown li{
 	float:none;
-	font-size:1em;
+	font-size:.7em;
 }
 nav ul li:hover{
 	
