--- a/css/blog.css
+++ b/css/blog.css
@@ -1,1 +1,58 @@
 /*css for blog posts */
+
+/* css for sidebar*/
+#sidebar{
+	
+}
+
+/*css for the posts */
+section#posts{
+	padding-top:300px; /* to avoid the navigation*/
+}
+
+section#posts article{
+	width: 80%;
+	margin:auto;
+}
+section#posts article div.title{
+	display:inline-block;
+}
+
+section#posts article h1{
+	font-family:nobilityCasual;
+	font-size: 1.5em;
+	padding-bottom: 5px;
+	
+}
+section#posts article h3{
+	font-family:nobilityCasual;
+	font-size: .8em;
+	color: #333333; /*slightly lighter than black*/
+	margin-left: 2%;
+	padding-bottom: 20px;
+	display:inline-block;
+	text-transform: uppercase;
+	
+}
+
+section#posts article time{
+	float:right;
+	display:inline;
+}
+
+section#posts article img{
+}
+
+section#posts article p{
+	width: 85%;
+	margin-left:2%;
+	text-indent: 30px;
+	font-family: caviarDreams;
+	clear:both;
+	padding:10px;
+	line-height:110%;
+	letter-spacing:1px;
+}
+section#posts article em{
+	font-weight:bold;
+}
