--- a/css/blog.css
+++ b/css/blog.css
@@ -11,8 +11,8 @@ section#posts{
 }
 
 section#posts article{
-	width: 80%;
-	margin:auto;
+	width: 60%;
+	margin-left:15%;
 }
 section#posts article div.title{
 	display:inline-block;
@@ -30,26 +30,31 @@ section#posts article h3{
 	color: #333333; /*slightly lighter than black*/
 	margin-left: 2%;
 	padding-bottom: 20px;
-	display:inline-block;
+	white-space: nowrap;
+	display:inline;
 	text-transform: uppercase;
 	
 }
 
 section#posts article time{
-	float:right;
-	display:inline;
+	display:block;
+	margin-left:2%;
+	padding: 4px 0px;
+	font-family: caviarDreams;
+	font-weight:bold;
+	font-size: .75em;
+	letter-spacing:-1px;
 }
 
 section#posts article img{
+	float:right;
 }
 
 section#posts article p{
 	width: 85%;
-	margin-left:2%;
-	text-indent: 30px;
+	text-indent: 2%;
 	font-family: caviarDreams;
-	clear:both;
-	padding:10px;
+	padding:10px 0px; 
 	line-height:110%;
 	letter-spacing:1px;
 }
