--- a/css/styles.css
+++ b/css/styles.css
@@ -181,7 +181,8 @@ header{
 	position:absolute;
 	right: 4em;
 	font-size:1.5em;
-	color:black;
+	color:#444444;
+	text-decoration:none;
 	
 }
 /*navigation css*/
