--- a/css/styles.css
+++ b/css/styles.css
@@ -267,7 +267,8 @@ p{
 	width:90%;
 	font-family:'caviarDreams';
 	color:black;
-	padding: 20px; 0px;
+	padding: 20px 0px;
+	margin-left:10px;
 }
 article{
 	width:70%;
@@ -279,23 +280,61 @@ a{text-decoration:none; color:  #B20100; }
 
 table{
 	font-family: caviarDreams;
+	font-size: 1.3em;
 }
 table td{
 	padding: 10px;
+}
+table td.label{
+	font-family: nobilityCasual;
 }
 
 #sidebar{
 	
 }
 
-
 /*extra stuff*/
 
-#contactgraphic{
-	float:right;
+
+#computingtitle{
+	color:black;
+	background: url(../media/code.svg) no-repeat;
+	width: 100%;
+	font-size: 2em;
+	padding-left: 85px;
+	height: 100px;
+	padding-top: 30px;
+	margin-left:10px;
+	
 }
 
+#mathtitle{
+	color:black;
+	background: url(../media/math.svg) no-repeat;
+	width: 100%;
+	font-size: 2em;
+	padding-left: 55px;
+	height: 100px;
+	padding-top: 30px;
+	margin-left:-25px;
+}
+article#contact{
+	background: url(../media/contact.svg) no-repeat;
+	background-position: right bottom;
+}
 
+article#contact h1{
+	font-size: 1.7em;
+	margin:5px;
+}
+
+article#contact p{
+	width:60%;
+}
+
+article#contact a{
+	float:left;
+}
 
 
 
