--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,1 +1,19 @@
 /* css for any page that contains a gallery */
+
+
+@media screen and (max-width: 1024px)
+{
+	
+}
+@media screen and (max-width: 768px)
+{	
+
+}
+@media screen and (max-width:640px)
+{
+	
+}
+@media screen and (max-width: 480px)
+{
+	
+}
