--- a/css/project.css
+++ b/css/project.css
@@ -22,3 +22,20 @@
 	color:white;
 	display:inline-block;
 }
+
+@media screen and (max-width: 1024px)
+{
+	
+}
+@media screen and (max-width: 768px)
+{	
+
+}
+@media screen and (max-width:640px)
+{
+	
+}
+@media screen and (max-width: 480px)
+{
+	
+}
