hiding the link to the japanese site, wont be able to have both finished by the due date

--- a/css/styles.css
+++ b/css/styles.css
@@ -184,6 +184,7 @@ header{
 	font-size:1.5em;
 	color:#444444;
 	text-decoration:none;
+	display:none; /*hidden for now, currently out of scope */
 	
 }
 /*navigation css*/
