--- a/css/blog.css
+++ b/css/blog.css
@@ -2,41 +2,51 @@
 
 /* css for sidebar*/
 #sidebar{
-	
+	margin-top: 300px;
 }
 
 /*css for the posts */
 section#posts{
+	width: 75%;
+	margin-left: 15%;
 }
 
 section#posts article{
-	width: 60%;
-	margin-left:15%;
+	
+	
 }
 section#posts article div.title{
 	display:inline-block;
+	padding-bottom: 20px;
 }
 
 section#posts article h1{
 	font-family:nobilityCasual;
 	font-size: 1.5em;
-	padding-bottom: 5px;
+	padding-bottom: 0px;
 	
 }
 section#posts article h3{
-	font-family:nobilityCasual;
+	font-family:caviarDreams;
 	font-size: .8em;
 	color: #333333; /*slightly lighter than black*/
 	padding-bottom: 20px;
 	white-space: nowrap;
 	display:inline;
-	text-transform: lowercase;
-	font-style:bold;
+	text-transform: uppercase;
+	font-weight:bold;
+}
+
+section#posts article h2{
+	font-family:caviarDreams;
+	font-weight:bold;
+	text-transform:uppercase;
+	color: #444444;
 }
 
 section#posts article time{
 	display:block;
-	margin-left:2%;
+	margin-left:1%;
 	padding: 4px 0px;
 	font-family: caviarDreams;
 	font-weight:bold;
@@ -57,9 +67,17 @@ section#posts article p{
 	letter-spacing:1px;
 }
 section#posts article em{
-	font-weight:bold;
+	font-weight:bolder;
 }
 
+section#posts article p{
+	width: 85%;
+	text-indent: 2%;
+	font-family: caviarDreams;
+	padding:10px 0px; 
+	line-height:110%;
+	letter-spacing:1px;
+}
 @media screen and (max-width: 1024px)
 {
 	
