--- a/css/project.css
+++ b/css/project.css
@@ -14,11 +14,14 @@
 	background-color:  #1F1A21;
 }
 
+.project p{
+	font-weight:bold;
+}
 .github{
 	margin:20px;
 	padding:10px 40px;
 	background-color: #B20100;
-	border-radius:25px;
+	border-radius:10px;
 	color:white;
 	display:inline-block;
 }
