--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -33,7 +33,23 @@ footer h1, h2,h3{
 footer a{
 	padding: 5px;
 }
+/*for index pages for individual sections */
 
+#subindex{
+	margin-left:11%;
+	width: 50%;
+}
+
+
+#subindex a{
+	display:block;
+	background-color: black;
+	color:white;
+	font-family: nobilityCasual;
+	margin-bottom: 25px;
+	
+	padding: 45px;
+}
 
 @media screen and (max-width: 1024px)
 {
