--- a/css/styles.css
+++ b/css/styles.css
@@ -61,17 +61,9 @@ table {
 
 }
 
-
-
-
 @font-face {
-    font-family: 'caviarDreams';
-    src: url('../media/fonts/caviardreams-webfont.eot');
-    src: url('../media/fonts/caviardreams-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../media/fonts/caviardreams-webfont.woff2') format('woff2'),
-         url('../media/fonts/caviardreams-webfont.woff') format('woff'),
-         url('../media/fonts/caviardreams-webfont.ttf') format('truetype'),
-         url('../media/fonts/caviardreams-webfont.svg#caviar_dreamsregular') format('svg');
+    font-family: 'roundedElegance';
+    src: url('../media/fonts/roundedElegance.ttf');
     font-weight: normal;
     font-style: normal;
 
@@ -79,51 +71,6 @@ table {
 
 
 
-
-@font-face {
-    font-family: 'caviarDreams';
-    src: url('../media/fonts/caviardreams_bold-webfont.eot');
-    src: url('../media/fonts/caviardreams_bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../media/fonts/caviardreams_bold-webfont.woff2') format('woff2'),
-         url('../media/fonts/caviardreams_bold-webfont.woff') format('woff'),
-         url('../media/fonts/caviardreams_bold-webfont.ttf') format('truetype'),
-         url('../media/fonts/caviardreams_bold-webfont.svg#caviar_dreamsbold') format('svg');
-    font-weight: bold;
-    font-style: normal;
-
-}
-
-
-
-
-@font-face {
-    font-family: 'caviarDreams';
-    src: url('../media/fonts/caviardreams_bolditalic-webfont.eot');
-    src: url('../media/fonts/caviardreams_bolditalic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../media/fonts/caviardreams_bolditalic-webfont.woff2') format('woff2'),
-         url('../media/fonts/caviardreams_bolditalic-webfont.woff') format('woff'),
-         url('../media/fonts/caviardreams_bolditalic-webfont.ttf') format('truetype'),
-         url('../media/fonts/caviardreams_bolditalic-webfont.svg#caviar_dreamsbold_italic') format('svg');
-    font-weight: bold;
-    font-style: italic;
-
-}
-
-
-
-
-@font-face {
-    font-family: 'caviarDreams';
-    src: url('../media/fonts/caviardreams_italic-webfont.eot');
-    src: url('../media/fonts/caviardreams_italic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../media/fonts/caviardreams_italic-webfont.woff2') format('woff2'),
-         url('../media/fonts/caviardreams_italic-webfont.woff') format('woff'),
-         url('../media/fonts/caviardreams_italic-webfont.ttf') format('truetype'),
-         url('../media/fonts/caviardreams_italic-webfont.svg#caviar_dreamsitalic') format('svg');
-    font-weight: normal;
-    font-style: italic;
-
-}
 
 
 
@@ -148,7 +95,9 @@ table {
     font-style: normal;
 
 }
-
+body{
+	padding-bottom: 150px; /* gives the page some breathing room */
+}
 
 /*header css*/
 header{
@@ -215,7 +164,7 @@ nav ul li a{
 	padding: 5px 20px; 
 	display:block;
 	text-decoration:none;
-	font-family:caviarDreams;
+	font-family:roundedElegance;
 	color: #FFF;
 }
 #current a{
@@ -267,7 +216,7 @@ h1,h2,h3
 
 p{
 	width:90%;
-	font-family:'caviarDreams';
+	font-family:'roundedElegance';
 	color:black;
 	padding: 20px 0px;
 	margin-left:10px;
@@ -281,7 +230,7 @@ article{
 a{text-decoration:none; color:  #B20100; }
 
 table{
-	font-family: caviarDreams;
+	font-family: roundedElegance;
 	font-size: 1.3em;
 }
 table td{
@@ -347,20 +296,89 @@ article#contact a{
 	float:left;
 }
 
-@media screen and (max-width: 1024px)
-{
-	
+article#contact p a{
+	float:none;
 }
-@media screen and (max-width: 768px)
-{	
 
-}
-@media screen and (max-width:640px)
+@media screen and (max-width: 1328px)
 {
+	nav ul li{
+	font-size:.8em;
+	width:120px;
+}
+@media screen and (max-width: 1066px)
+{	
+	nav{
+		margin-left:5%;
+		width:90%;
+		margin-right:5%;
+	}
+	article{
+		margin-left:5%;
+	}
+	nav ul li{
+	font-size:.7em;
+	width:100px;
+	}
 	
+	article#contact{
+		width:65%;
+	}
 }
-@media screen and (max-width: 480px)
+@media screen and (max-width:794px)
 {
+	nav ul li{
+	font-size:.6em;
+	width:90px;
+	}
+	article#contact{
+		width:75%;
+	}
+}
+@media screen and (max-width: 716px)
+{
+	article{
+		padding-top:500px;
+	}
+	header{
+		position:static;
+	}
+	nav ul li:hover ul.dropdown{ 
+	display:none;
+	}
+	nav ul li ul.dropdown li {display: none;  }
+	nav ul li{
+	font-size:1em;
+	width:100%;
+	text-align: center;
+	padding-bottom: 20px;
+	height:40px;
+	}
+	
+	#gametitle{
+		background:none;
+		padding-left:0px;
+	}
+	
+	#computingtitle{
+		background:none;
+		padding-left:0px;
+	}
+	
+	#mathtitle{
+		background:none;
+		padding-left:0px;
+	}
+	article#contact{
+		background:none;
+	}
+}
+
+@media screen and (max-width: 335px)
+{
+	#logo{
+		background:none;
+	}
 	
 }
 
