--- a/css/styles.css
+++ b/css/styles.css
@@ -357,17 +357,17 @@ article#contact p a{
 	
 	#gametitle{
 		background:none;
-		padding-left:0px;
+		padding-left:8%;
 	}
 	
 	#computingtitle{
 		background:none;
-		padding-left:0px;
+		padding-left:8%;
 	}
 	
 	#mathtitle{
 		background:none;
-		padding-left:0px;
+		padding-left:8%;
 	}
 	article#contact{
 		background:none;
