fixing up some things before starting the second part of the project

--- a/css/blog.css
+++ b/css/blog.css
@@ -130,7 +130,8 @@ section#posts article li{
 {
 	#sidebar{display:none;}
 	section#posts{
-		padding-top:500px;
+		padding-top:350px;
+		margin-left:6%;
 	}
 }
 
