--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -10,7 +10,7 @@ div#graphic img{
 }
 
 /*footer css*/
-footer{
+main{
 	top: 20%;
 	width:90%;
 	font-family:'roundedElegance';
@@ -21,16 +21,16 @@ footer{
 
 a{text-decoration:none;}
 
-footer p{
+main p{
 	width:50%;
 	margin-left:2%;
 }
-footer h1, h2,h3{
+main h1, h2,h3{
 	font-family:'nobilityCasual';
 	color: #1F1A21; 
 	
 }
-footer a{
+main a{
 	padding: 5px;
 }
 /*for index pages for individual sections */
@@ -59,7 +59,7 @@ footer a{
 	div#graphic img{
 		display:none;
 	}
-	footer{
+	main{
 		margin-top:400px;
 	}
 
