lets see if SSI works in a php app..

--- a/include/header.html
+++ b/include/header.html
@@ -1,3 +1,40 @@
-<footer>
-</p>All images, html, css, javascript by me. This site uses jQuery and FormMail. Margaret Dorsey 2015.</p>
-</footer>
+<header> 
+	<div id="logo"> <span>Margaret E. Dorsey</span></div>
+	<a id="japanese" href="../japanese/index.html" lang="ja" hreflang="ja">日本語 </a>
+	
+	<nav> 
+		<!-- main navigation (always visible) -->
+		<ul>
+			<li><a href="/home.html" id="indexnav" > Front Page </a></li>
+			<li>
+				<a href="/math/index.html" id="mathnav">Mathematics</a>
+				<!-- sub navigation for math (invisible until hover)-->
+				<ul class="dropdown">
+					<li><a href="education.html"> Education </a> </li>
+					<li><a href="research.html"> Research </a> </li>
+				</ul>
+			</li>
+			<li>
+				<a href="/computing/index.html" id="computingnav" >Computing </a>
+				<!-- sub navigation for computing (invisible until hover) -->
+				<ul class="dropdown">
+					<li><a href="../computing/education.html"> Education </a> </li>
+					<li><a href="../computing/completedprojects.html"> Completed Projects </a> </li>
+					<li><a href="../computing/currentprojects.html"> Current Projects </a> </li>
+				</ul>
+			</li>
+			<li>
+				<a href="/gamedesign/index.html" id="gamenav">Game Design</a>
+					<!-- sub navigation for game design (invisible until hover) -->
+					<ul class="dropdown">
+						<li><a href="../gamedesign/design.html"> Design</a> </li>
+						<li><a href="../gamedesign/artworkandassets.html"> Artwork and Assets </a> </li>
+						<li><a href="../gamedesign/games.html"> Games </a> </li>
+					</ul>
+			</li>
+			<li><a href="/blog/index.html" id="blognav">Blog</a></li>
+			<li><a href="/contact.html" id="contactnav" > Contact </a> </li>
+			<li><a href="/Resume.pdf">Resume</a></li>
+		</ul>		
+	</nav>
+</header>
