--- a/include/header.html
+++ b/include/header.html
@@ -10,26 +10,26 @@
 				<a href="/math/index.html" id="mathnav">Mathematics</a>
 				<!-- sub navigation for math (invisible until hover)-->
 				<ul class="dropdown">
-					<li><a href="education.html"> Education </a> </li>
-					<li><a href="research.html"> Research </a> </li>
+					<li><a href="/math/education.html"> Education </a> </li>
+					<li><a href="/math/research.html"> Research </a> </li>
 				</ul>
 			</li>
 			<li>
 				<a href="/computing/index.html" id="computingnav" >Computing </a>
 				<!-- sub navigation for computing (invisible until hover) -->
 				<ul class="dropdown">
-					<li><a href="../computing/education.html"> Education </a> </li>
-					<li><a href="../computing/completedprojects.html"> Completed Projects </a> </li>
-					<li><a href="../computing/currentprojects.html"> Current Projects </a> </li>
+					<li><a href="/computing/education.html"> Education </a> </li>
+					<li><a href="/computing/completedprojects.html"> Completed Projects </a> </li>
+					<li><a href="/computing/currentprojects.html"> Current Projects </a> </li>
 				</ul>
 			</li>
 			<li>
 				<a href="/gamedesign/index.html" id="gamenav">Game Design</a>
 					<!-- sub navigation for game design (invisible until hover) -->
 					<ul class="dropdown">
-						<li><a href="../gamedesign/design.html"> Design</a> </li>
-						<li><a href="../gamedesign/artworkandassets.html"> Artwork and Assets </a> </li>
-						<li><a href="../gamedesign/games.html"> Games </a> </li>
+						<li><a href="/gamedesign/design.html"> Design</a> </li>
+						<li><a href="/gamedesign/artworkandassets.html"> Artwork and Assets </a> </li>
+						<li><a href="/gamedesign/games.html"> Games </a> </li>
 					</ul>
 			</li>
 			<li><a href="/blog/index.html" id="blognav">Blog</a></li>
