still incompetent.. updating links in nav to php extensions

--- a/include/header.html
+++ b/include/header.html
@@ -7,33 +7,33 @@
 		<ul>
 			<li><a href="/home.html" id="indexnav" > Front Page </a></li>
 			<li>
-				<a href="/math/index.html" id="mathnav">Mathematics</a>
+				<a href="/math/index.php" id="mathnav">Mathematics</a>
 				<!-- sub navigation for math (invisible until hover)-->
 				<ul class="dropdown">
-					<li><a href="/math/education.html"> Education </a> </li>
-					<li><a href="/math/research.html"> Research </a> </li>
+					<li><a href="/math/education.php"> Education </a> </li>
+					<li><a href="/math/research.php"> Research </a> </li>
 				</ul>
 			</li>
 			<li>
-				<a href="/computing/index.html" id="computingnav" >Computing </a>
+				<a href="/computing/index.php" id="computingnav" >Computing </a>
 				<!-- sub navigation for computing (invisible until hover) -->
 				<ul class="dropdown">
-					<li><a href="/computing/education.html"> Education </a> </li>
-					<li><a href="/computing/completedprojects.html"> Completed Projects </a> </li>
-					<li><a href="/computing/currentprojects.html"> Current Projects </a> </li>
+					<li><a href="/computing/education.php"> Education </a> </li>
+					<li><a href="/computing/completedprojects.php"> Completed Projects </a> </li>
+					<li><a href="/computing/currentprojects.php"> Current Projects </a> </li>
 				</ul>
 			</li>
 			<li>
 				<a href="/gamedesign/index.html" id="gamenav">Game Design</a>
 					<!-- sub navigation for game design (invisible until hover) -->
 					<ul class="dropdown">
-						<li><a href="/gamedesign/design.html"> Design</a> </li>
-						<li><a href="/gamedesign/artworkandassets.html"> Artwork and Assets </a> </li>
-						<li><a href="/gamedesign/games.html"> Games </a> </li>
+						<li><a href="/gamedesign/design.php"> Design</a> </li>
+						<li><a href="/gamedesign/artworkandassets.php"> Artwork and Assets </a> </li>
+						<li><a href="/gamedesign/games.php"> Games </a> </li>
 					</ul>
 			</li>
-			<li><a href="/blog/index.html" id="blognav">Blog</a></li>
-			<li><a href="/contact.html" id="contactnav" > Contact </a> </li>
+			<li><a href="/blog/index.php" id="blognav">Blog</a></li>
+			<li><a href="/contact.php" id="contactnav" > Contact </a> </li>
 			<li><a href="/Resume.pdf">Resume</a></li>
 		</ul>		
 	</nav>
