starting on the javascript

--- a/include/header.html
+++ b/include/header.html
@@ -5,9 +5,9 @@
 	<nav> 
 		<!-- main navigation (always visible) -->
 		<ul>
-			<li><a href="/home.html" id="indexnav" > Front Page </a></li>
+			<li><a href="/home.html" name="indexnav" > Front Page </a></li>
 			<li>
-				<a href="/math/index.php" id="mathnav">Mathematics</a>
+				<a href="/math/index.php" name="mathnav">Mathematics</a>
 				<!-- sub navigation for math (invisible until hover)-->
 				<ul class="dropdown">
 					<li><a href="/math/education.php"> Education </a> </li>
@@ -15,7 +15,7 @@
 				</ul>
 			</li>
 			<li>
-				<a href="/computing/index.php" id="computingnav" >Computing </a>
+				<a href="/computing/index.php" name="computingnav" >Computing </a>
 				<!-- sub navigation for computing (invisible until hover) -->
 				<ul class="dropdown">
 					<li><a href="/computing/education.php"> Education </a> </li>
@@ -24,7 +24,7 @@
 				</ul>
 			</li>
 			<li>
-				<a href="/gamedesign/index.html" id="gamenav">Game Design</a>
+				<a href="/gamedesign/index.html" name="gamenav">Game Design</a>
 					<!-- sub navigation for game design (invisible until hover) -->
 					<ul class="dropdown">
 						<li><a href="/gamedesign/design.php"> Design</a> </li>
@@ -32,8 +32,8 @@
 						<li><a href="/gamedesign/games.php"> Games </a> </li>
 					</ul>
 			</li>
-			<li><a href="/blog/index.php" id="blognav">Blog</a></li>
-			<li><a href="/contact.php" id="contactnav" > Contact </a> </li>
+			<li><a href="/blog/index.php" name="blognav">Blog</a></li>
+			<li><a href="/contact.php" name="contactnav" > Contact </a> </li>
 			<li><a href="/Resume.pdf">Resume</a></li>
 		</ul>		
 	</nav>
