fixed some weirdness with the file naming

--- a/include/header.html
+++ b/include/header.html
@@ -5,7 +5,7 @@
 	<nav> 
 		<!-- main navigation (always visible) -->
 		<ul>
-			<li><a href="/home.html" name="indexnav" > Front Page </a></li>
+			<li><a href="/index.php" name="indexnav" > Front Page </a></li>
 			<li>
 				<a href="/math/index.php" name="mathnav">Mathematics</a>
 				<!-- sub navigation for math (invisible until hover)-->
