--- a/include/header.html
+++ b/include/header.html
@@ -1,6 +1,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> <!-- include jQuery -->
 <script>$(".topnav").hover(function(e){
-    $("e .dropdown").slideDown();
+    $("e.target .dropdown").slideDown();
 },function(e){$("e.target .dropdown").slideUp();}); </script>
 
 <header> 
@@ -11,25 +11,25 @@
 		<!-- main navigation (always visible) -->
 		<ul>
 			<li><a href="/index.php" name="indexnav"> Front Page </a></li>
-			<li>
-				<a href="/math/index.php" name="mathnav" class ="topnav">Mathematics</a>
+			<li class ="topnav">
+				<a href="/math/index.php" name="mathnav" >Mathematics</a>
 				<!-- sub navigation for math (invisible until hover)-->
 				<ul class="dropdown">
 					<li><a href="/math/education.php"> Education </a> </li>
 					<li><a href="/math/research.php"> Research </a> </li>
 				</ul>
 			</li>
-			<li>
-				<a href="/computing/index.php" name="computingnav" class="topnav">Computing </a>
+			<li class="topnav">
+				<a href="/computing/index.php" name="computingnav" >Computing </a>
 				<!-- sub navigation for computing (invisible until hover) -->
 				<ul class="dropdown">
 					<li><a href="/computing/education.php"> Education </a> </li>
 					<li><a href="/computing/completedprojects.php"> Completed Projects </a> </li>
 					<li><a href="/computing/currentprojects.php"> Current Projects </a> </li>
 				</ul>
-			</li>
+			</li class="topnav">
 			<li>
-				<a href="/gamedesign/index.html" name="gamenav" class="topnav">Game Design</a>
+				<a href="/gamedesign/index.html" name="gamenav">Game Design</a>
 					<!-- sub navigation for game design (invisible until hover) -->
 					<ul class="dropdown">
 						<li><a href="/gamedesign/design.php"> Design</a> </li>
