adding debug output

--- a/include/header.html
+++ b/include/header.html
@@ -1,5 +1,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> <!-- include jQuery -->
 <script>$(".topnav").hover(function(e){
+	console.log("hover");
     $("e.target .dropdown").slideDown();
 },function(e){$("e.target .dropdown").slideUp();}); </script>
 
