changed some js

--- a/include/header.html
+++ b/include/header.html
@@ -1,8 +1,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> <!-- include jQuery -->
-<script>$(".topnav").hover(function(e){
+<script>$(document).ready(function(){$(".topnav").hover(function(e){
 	console.log("hover");
     $("e.target .dropdown").slideDown();
-},function(e){$("e.target .dropdown").slideUp();}); </script>
+},function(e){$("e.target .dropdown").slideUp();})}); </script>
 
 <header> 
 	<div id="logo"> <span>Margaret E. Dorsey</span></div>
