--- a/include/header.html
+++ b/include/header.html
@@ -1,8 +1,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> <!-- include jQuery -->
 <script>$(document).ready(function(){$(".topnav").hover(function(e){
 	console.log("hover");
-    $("#"+e.target.id+" .dropdown").slideDown();
-},function(e){$("#"+e.target.id+" .dropdown").slideUp();})}); </script>
+    $("#"+$(this).id+" .dropdown").slideDown();
+},function(e){$("#"+$(this).id+" .dropdown").slideUp();})}); </script>
 
 <header> 
 	<div id="logo"> <span>Margaret E. Dorsey</span></div>
