I hate javascript right now

--- a/include/header.html
+++ b/include/header.html
@@ -30,7 +30,7 @@
 				</ul>
 			</li class="topnav" id="3">
 			<li>
-				<a href="/gamedesign/index.html" name="gamenav">Game Design</a>
+				<a href="/gamedesign/index.php" name="gamenav">Game Design</a>
 					<!-- sub navigation for game design (invisible until hover) -->
 					<ul class="dropdown">
 						<li><a href="/gamedesign/design.php"> Design</a> </li>
