--- a/include/header.html
+++ b/include/header.html
@@ -1,8 +1,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> <!-- include jQuery -->
 <script>$(document).ready(function(){$(".topnav").hover(function(e){
 	console.log("hover");
-    $("#"+$(this).id+" .dropdown").slideDown();
-},function(e){$("#"+$(this).id+" .dropdown").slideUp();})}); </script>
+    $(this).children('.dropdown').slideDown(200);
+},function(e){$(this).children('.dropdown').slideUp(200);})}); </script>
 
 <header> 
 	<div id="logo"> <span>Margaret E. Dorsey</span></div>
